[package]
name = "ghlens"
version = "0.1.5"
edition = "2021"
description = "A terminal UI for browsing a GitHub repo's event history: activity chart, live per-column filters, and commit drill-down."
repository = "https://github.com/dmissoh/ghlens"
license = "MIT"

[[bin]]
name = "ghlens"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"          # re-exports crossterm, so no separate crossterm dep to version-match
serde_json = "1"

[profile.release]
opt-level = 2
